--- a/2024/5_30.md
+++ b/2024/5_30.md
@@ -4,19 +4,9 @@
 
 - 案件菊池さんがＭＡＺＤＡ案件に入っている
 - 塚原さん7月までおそらく電通案件にはいっている（おそらく富士通）
-- ＴＩＭＥＳ
-- で流している
-- 案件での
-- ＢＣＩ
-- 菊池さん
-- ＤＩＳＵＫＯ
-- 会話の時間を
-- 追加も
-- ＰＬＭ部会の構築も
-- 勤怠
-- 経費
+- PLM部会の定例会も必要　9時からの勉強会で業務の進捗と相談等の話もしてはどうか？
+- BCI事業部の星川さんにノーションの業務把握欄にPLMも入れてもらえないか聞く
 - 領収書を木下さんに送る
 - 経費は6月4日
 - 勤怠は31日に
-- トータスなんちゃら
-- をつかってみる
+- TortoiseSVN インストール　手順書の作成
