--- a/2024/5_30.md
+++ b/2024/5_30.md
@@ -1,3 +1,18 @@
+## 佐々木社長言葉
+- 基本はこんな感じでやっていきましょう。
+「作業をする前にアウトプットのイメージを作る」
+「わからなかったすぐに聞く」
+「困ったらすぐに相談する」
+「聞かれたら進んで答える」
+「困ってそうな人がいたら声をかけてみる」
+これを守っていれば、プロジェクトはうまくいくはず！
+ゴールは、あくまでもプロジェクトを期日内に完成させることです。
+各自どうすれば最短で達成できるかという観点で仕事に取り組んでもらえたらと思います。
+なので、一人で抱え込まないようすること。
+わからないことを早めに人に聞くのはとてもよいこと(早めが重要)
+で、今度人に聞かれたら喜んでおしえてあげるようにしてもらえたらとおもいます。
+
+
 ## 5月30日　4時　鈴木さんとのML　途中塚原さんも参加
 
 ---
